styles/index.css
:root {
  --clr-cta: hsl(148, 57%, 82%);
  --clr-cta-hover: hsl(148, 61%, 77%);
  --clr-gray: hsl(276, 10%, 90%);
  --clr-primary: hsl(272, 32%, 92%);
  --clr-dark: hsl(0, 0%, 27%);
  --clr-darkest: hsl(270, 5%, 15%);
  --clr-light: hsl(234, 6%, 95%);
  --font-primary: "Roboto", sans-serif;
  --font-headers: "Archivo Black", sans-serif;
  --font-xs: 15px;
  --font-s: 18px;
  --font-m: 20px;
  --font-l: 32px;
  --font-xl: 46px;
  --font-xxl: 64px;
  --spacing-xs: 4px;
  --spacing-s: 8px;
  --spacing-m: 16px;
  --spacing-l: 32px;
  --spacing-xl: 64px;
  --spacing-xxl: 128px;
  --radius-soft: 3px;
  --radius-circle: 50%;
  --transition-quick: all 0.2s;
  --shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
  scroll-behavior: smooth;
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  background: var(--clr-darkest);
  color: var(--clr-light);
  font-family: var(--font-primary);
  font-size: var(--font-s);
}

section {
  margin: var(--spacing-xxl) 0;
}

ul {
  list-style-type: none;
}

/* Typography  */
h1,
h2,
h3 {
  font-family: var(--font-headers);
  text-align: center;
}

h1 {
  font-size: var(--font-xl);
  line-height: 1.2;
}

h2 {
  padding: var(--spacing-m);
}

p {
  line-height: 1.6;
}

/* Buttons & Icons  */
a,
button {
  text-decoration: none;
  cursor: pointer;
  transition: var(--transition-quick);
  color: var(--clr-light);
}

a:hover,
button:hover {
  text-decoration: underline;
}

button {
  border: none;
  background: none;
}

.btn {
  display: inline-block;
  border-radius: var(--radius-soft);
  margin-top: var(--spacing-l);
  padding: var(--spacing-s) var(--spacing-l);
  font-weight: bold;
}

.btn--primary {
  background: var(--clr-cta);
  color: var(--clr-dark);
}

.btn--primary:hover {
  background: var(--clr-cta-hover);
}

.btn--alt:hover {
  background: var(--clr-primary);
  color: var(--clr-dark);
}

.icon-btn {
  padding: var(--spacing-m);
}

i {
  pointer-events: none;
  font-size: 22px;
}

.fa-bars {
  position: absolute;
  top: var(--spacing-m);
  right: var(--spacing-m);
}

.fa-xmark {
  color: var(--clr-light);
}

/* Utility */
.flex {
  display: flex;
}

.flex-column {
  flex-flow: column;
}

.content {
  display: flex;
  flex-flow: column;
  align-items: center;
  gap: var(--spacing-s);
}

.hidden {
  display: none;
}

/* Containers */
.container {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 var(--spacing-m);
}

.container--wide {
  padding: var(--spacing-m) var(--spacing-xl);
}

.container--xs {
  max-width: 600px;
}

/* Nav  */
.nav {
  gap: var(--spacing-l);
  justify-content: space-between;
}

.nav a {
  font-size: var(--font-xs);
  text-transform: uppercase;
}

.align-left {
  margin-right: auto;
}

/* Nav Ham Menu */
.nav-drawer {
  position: fixed;
  top: 0;
  right: 0;
  height: 100vh;
  width: 80vw;
  background: var(--clr-dark);
  font-size: var(--font-m);
  text-align: center;
  z-index: 999;
}

.nav-drawer li:first-child {
  text-align: right;
}

.nav-drawer a {
  display: inline-block;
  padding: var(--spacing-m);
  width: 100%;
}

/* Hero Section  */
.card {
  display: flex;
  justify-content: space-between;
  align-items: center;
  border: 1px solid var(--clr-gray);
  border-radius: var(--radius-soft);
  padding: var(--spacing-m);
}

.card-right,
.card-left {
  width: 50%;
}

.card--hero {
  border: none;
  padding: var(--spacing-xxl) var(--spacing-m);
  position: relative;
}

.card-inner {
  margin: 0 auto;
}

/* Hero Animation  */
.hero-animation {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: -1;
}

.circle {
  background: var(--clr-light);
  border-radius: var(--radius-circle);
  position: absolute;
  animation: square 10s linear infinite;
}

.circle--2 {
  animation-delay: 1s;
}

.circle--3 {
  animation-delay: 2s;
}

.circle--4 {
  animation-delay: 3s;
}

.circle--5 {
  animation-delay: 4s;
}
.circle--6 {
  animation-delay: 5s;
}
.circle--7 {
  animation-delay: 6s;
}
.circle--8 {
  animation-delay: 7s;
}
.circle--9 {
  animation-delay: 8s;
}
.circle--10 {
  animation-delay: 9s;
}

@keyframes square {
  0% {
    width: 10px;
    height: 10px;
    left: 0;
    bottom: calc(100% - 10px);
  }
  25% {
    left: 0;
    bottom: 0;
  }
  50% {
    left: calc(100% - 10px);
    bottom: 0;
  }
  75% {
    left: calc(100% - 10px);
    bottom: calc(100% - 10px);
  }
  100% {
    width: 10px;
    height: 10px;
    left: 0;
    bottom: calc(100% - 10px);
  }
}

/* Projects Section  */
.projects__list {
  gap: var(--spacing-l);
}

.tags-ul {
  gap: var(--spacing-s);
}

.tag {
  border: 1px solid var(--clr-gray);
  padding: var(--spacing-xs) var(--spacing-s);
  border-radius: 200px;
  font-size: var(--font-xs);
}

.project-img {
  height: 300px;
  width: 100%;
  object-fit: cover;
  border-radius: var(--radius-soft);
  border: 1px solid var(--clr-gray);
}

.project-links__container {
  gap: var(--spacing-m);
}

.card--flipped {
  flex-direction: row-reverse;
}

.card--flipped .card-right {
  justify-content: end;
}

/* Contact  */
button,
input,
textarea {
  font-size: var(--font-s);
  font-family: var(--font-primary);
}

.form {
  width: 100%;
  gap: var(--spacing-s);
}

.form input,
.form textarea {
  padding: var(--spacing-m) var(--spacing-s);
  border: 1px solid var(--clr-gray);
  border-radius: var(--radius-soft);
  resize: none;
}

.form label,
.form input,
.form textarea {
  width: 100%;
}

/* Footer */
.container--footer {
  gap: var(--spacing-m);
}

.social__list,
.social__list li {
  justify-content: center;
  gap: var(--spacing-m);
}

.copyright {
  text-align: center;
  font-size: var(--font-xs);
}

@media only screen and (max-width: 500px) {
  .nav--desktop {
    display: none;
  }
  .nav--mobile {
    display: flex;
  }
  .ham-btn {
    display: block;
  }
  .card-inner {
    width: 100%;
  }
  .btn {
    width: 100%;
    text-align: center;
  }
  .content {
    align-items: stretch;
  }
}

@media only screen and (max-width: 1000px) {
  .card {
    flex-flow: column-reverse;
    gap: var(--spacing-m);
    text-align: center;
  }
  .card-left,
  .card-right {
    width: 100%;
  }
  .project-links__container {
    flex-flow: column;
    gap: 0;
  }
  .tags-ul {
    justify-content: center;
  }
  .form {
    text-align: left;
  }
}

@media only screen and (max-width: 1500px) {
  .container--wide {
    padding: var(--spacing-m);
  }
}

@media only screen and (min-width: 501px) {
  .nav--desktop {
    display: flex;
  }
}

